# summarize_tube

./: .gitignore  README.md  Taskfile.yml  pyproject.toml
.github/workflows/: lint.yml  run_test.yml  setup-env.yml
summarize_tube/: __main__.py  gui_app.py  models.py  settings.py  utils.py
summarize_tube/tests/: test_field_prompts.py  test_summery_tube_model.py  test_video_url_parse.py
